# work

./: .gitignore
cpp/: CMakeLists.txt
cpp/blocking_queue/: blocking_queue.cpp  blocking_queue.h
cpp/file_iterator/: file_iterator.cpp  file_iterator.h  test.txt
cpp/lock_free_stack/: lock_free_stack  lock_free_stack.cpp  lock_free_stack.h
cpp/memory_mapped_queues/: m_mapped_circular_buffer.cpp  m_mapped_circular_buffer.h
cpp/memory_mapped_queues/consumer/: main.cpp
cpp/memory_mapped_queues/producer/: main.cpp
cpp/rate_limiter/: Main.cpp  rate_limiter.h
cpp/rw_lock/: rwlock.cpp
cpp/sockets/: client  client.cpp  server  server.cpp
java/: pom.xml
java/MFAnalysis/: pom.xml
java/MFAnalysis/results/: result.csv
java/MFAnalysis/results/hdfc/: hdfc1.csv  hdfc2.csv
java/MFAnalysis/results/hdfc_short_term_debt/: file1.csv  file2.csv
java/MFAnalysis/results/sbi/: file1.csv  file2.csv
java/MFAnalysis/results/sbi_conservative/: file1.csv  file2.csv
java/TestService/: pom.xml
java/TestService1/: pom.xml
java/deploy/: Dockerfile  networks-compose.yaml
java/deploy/grafana/: service.yaml
java/deploy/jaeger/: service.yaml
java/deploy/kafka/: service.yaml
java/deploy/otel_collector/: otel-collector-config.yaml  service.yaml
java/deploy/prometheus/: prometheus.yaml  service.yaml
java/deploy/test_service/: service.yaml
java/deploy/test_service_1/: service.yaml
redis/: build.gradle.kts  settings.gradle.kts
redis/deploy/: redis_cluster.yml
redis/gradle/wrapper/: gradle-wrapper.properties
redis/src/main/java/dev/rohit/: Main.java
(+19 files in other folders)
